soroban-sdk/src/tests/trybuild/contracttype_struct_field_name_too_long.stderr
error: struct field name symbol too long: length 11, max 10
 --> src/tests/trybuild/contracttype_struct_field_name_too_long.rs:6:9
  |
6 |     pub f2istoolong: bool,
  |         ^^^^^^^^^^^
